fixed navbar link spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,6 +46,7 @@ h1 {
 
 .navbar-links {
   font-size: 18px;
+  margin-top: 17px;
 }
 
 #navbar-text-right {
